- Fixed slight problem with help prompt for /team create (#114)

Development changes: 
- Reworked Team class to avoid code reuse
- Removed support for the depreciated event listener BelowNameChangeListener, Use spigot event observer pattern instead (#131)
- Removed hardcoding for config updating

4.0.1:

Bug fixes: 
- fixed bug causing teams to load details incorrectly when a color is not set (#175) (#174)

4.0.2: 
Features: 
- Added translations for Catlan (#186)

Bug Fixes: 
- Fixed bug causing betterteams to not start if there is problems with teamStorage (#184)
- Fixed bug causing money to be taken from player balance even if their team has a max bank (#180)
- Fixed bug causing echest changes to not save (#181) 
- Fixed bug causing teams to disband incorrectly (#178 #190 #182 #187 #176 #177)
- Fixed bug causing /teama reload to crash the plugin (#189)
- Fixed bug with team names with the symbol `:` in (#185)

4.0.3:

Bug Fixes: 
- Fixed bug causing the config to not reload with /teama reload (#202)
- Fixed bug causing teams to break when they change their name (#204 #199 #193)
- Fixed bug causing teams to be unloaded while players are still online (#205)

Development Changes: 
- Replaced the selection sign with an escape code (#196)

4.0.4: 

Bug Fixes: 
- Removed Team echest duplication bug (#207 #204)

4.0.5:

Features: 
- Added a description to /team rank (#215)

Improvements: 
- Added worldgaurd version checking (#173)
- Stores individual team preference to /team pvp across reloads (#203)

Bug Fixes: 
- Fixed bug with /team ban <player> for offline players (#217)
- Fixed bug with worldguard and /teama reload (#173)

4.1.0: 

Features: 
- Added Mexican Spanish translations (es_mx) (#222)

Improvements: 
- Fixed a typo in messages.yml

Bug Fixes:

- Fixed a bug causing /team title to not work (#221)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
