@@ -269,7 +269,18 @@ levels:
       # - If this is set to 0, teams of that level will not have a team bank (to completely disable use teampermissions.yml)
       #
       # Possible values [-1, 0, any positive number]
-      maxBal: -1
+      maxBal: -1 
+      # The maximum number of admins a team is allowed while is has this rank
+      # - If this is set to -1 there will not be a limit
+      # 
+      # Possible values [-1, any positive number]
+      maxAdmins: 5
+      # The maximum number of owners a team is allowed at this rank
+      # - If singleOwner is set to true this value will be ignored
+      # 
+      # Possible values [any positive whole number]
+      maxOwners: 2
+      
       # This is a list of commands that are run when a team 
       # Any player which contains %player% will be run for every player on the team
       # Placeholders:
@@ -296,6 +307,8 @@ levels:
       maxChests: 2
       maxWarps: 2
       maxBal: -1
+      maxAdmins: 5
+      maxOwners: 1
       rankLore:
       - '&7The secondrank'
       
