@@ -101,11 +101,14 @@ promote.success: '&6That player has been promoted'
 promote.noPerm: '&6You do not have permissions to promote that person'
 promote.max: '&6That person is already promoted to the max!'
 promote.notify: '&6You have been promoted!'
+promote.maxAdmins: '&4Your team already has the maximum number of admins, demote someone or level your team up'
+promote.maxOwners: '&4Your team already has the maximum number of owners, demote someone or level your team up'
 demote.success: '&6That player has been demoted'
 demote.noPerm: '&6You do not have permissions to demote that person'
 demote.min: '&6That person is already the lowest rank'
 demote.notify: '&6You have been demoted'
 demote.lastOwner: '&6You cannot demote the final owner, promote someone else first'
+demote.maxAdmins: '&4Your team already has the maximum number of admins, remove and admin or level your team up'
 home.success: '&6You have been teleported'
 home.noHome: '&6Your team has not set a home'
 home.world: '&4You team home could not be found'
@@ -222,10 +225,13 @@ admin.leave.notify: '&6You have left that team'
 admin.demote.notify: '&6You have been demoted'
 admin.demote.success: '&6That player has been demoted'
 admin.demote.min: '&4That player cannot be demoted any more'
+admin.demote.maxAdmins: '&4That team already has the max number of admins, remove one before demoting this player'
 admin.promote.max: '&6That player is already the maximum rank'
 admin.promote.notify: '&6You have been promoted'
 admin.promote.success: '&6That player has been promoted'
 admin.promote.owner: '&6It is configured that teams can only have a single owner, do &b/teama setowner <player> &6to set the player as the owner'
+admin.promote.maxAdmins: '&4That team already has the max number of admins, remove one before promoting that player'
+admin.promote.maxOwners: '&4That team already has the max number of owners, remove one before promoting that player'
 admin.setowner.already: '&4That player is already an owner'
 admin.setowner.nonotify: '&6You are no longer owner of the team'
 admin.setowner.success: '&6That player is the new team owner'
