@@ -400,6 +400,7 @@ Bug Fixes:
 
 Features: 
 - Added Mexican Spanish translations (es_mx) (#222)
+- Added the ability to limit the number of admins and owners per team (#156)
 
 Improvements: 
 - Fixed a typo in messages.yml
